--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_PASSWORD='kodemia123'
 DB_HOST='pruebaamparapp.r1kjr.mongodb.net'
 DB_NAME='amparapp'
 JWT_SECRET='supersecretword'
-SENDGRID_API_KEY='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'
+SENDGRID_API_KEY='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'
